--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,4 @@ pistoncore-glutin_window = "0.47.0"
 piston2d-opengl_graphics = "0.53.0"
 piston-ai_behavior = "0.24.0"
 piston2d-sprite = "0.45.0"
+rand="0.3.0"
